--- a/todolist.html
+++ b/todolist.html
@@ -20,6 +20,7 @@
 <h1>
     Monday
 </h1>
+<img src="/images/kevin-mccutcheon-APDMfLHZiRA-unsplash.jpg" alt="Cooking" width="100px" height="100px">
 <p>
     I have to cook!
 </p>
